# find_shape_model

./: .gitignore  CMakeLists.txt  CMakePresets.json  about_MSVC_openmp.txt  find_shape_model.cpp  find_shape_model.h  test.cpp
cuda_icp/: CMakeLists.txt
cuda_icp/scene/kdtree_scene/: kdtree_scene.cpp
